OmniMixPlayer/gui_flutter/lib/services/omni_sdk_bindings.dart


final omniClientCreate = omniDll
    .lookupFunction<_CreateClientNative, _CreateClientDart>(
      'OmniPcmClient_Create',
    );
final omniClientDestroy = omniDll
    .lookupFunction<_DestroyClientNative, _DestroyClientDart>(
      'OmniPcmClient_Destroy',
    );
final omniClientLastError = omniDll
    .lookupFunction<_GetErrorNative, _GetErrorDart>(
      'OmniPcmClient_GetLastError',
    );
final omniClientGetPort = omniDll.lookupFunction<_GetPortNative, _GetPortDart>(
  'OmniPcmClient_GetPort',
);
final omniClientConnect = omniDll
    .lookupFunction<_ConnectInstanceNative, _ConnectInstanceDart>(
      'OmniPcmClient_ConnectInstance',
    );
final omniClientHeartbeat = omniDll
    .lookupFunction<_HeartbeatNative, _HeartbeatDart>(
      'OmniPcmClient_Heartbeat',
    );
final omniClientDisconnect = omniDll
    .lookupFunction<_DisconnectNative, _DisconnectDart>(
      'OmniPcmClient_DisconnectInstance',
    );
final omniClientDeleteInstance = omniDll
    .lookupFunction<_DeleteInstanceNative, _DeleteInstanceDart>(
      'OmniPcmClient_DeleteInstance',
    );
final omniClientListInstances = omniDll
    .lookupFunction<_ListInstancesNative, _ListInstancesDart>(
      'OmniPcmClient_ListInstances',
    );
final omniClientGetProfile = omniDll
    .lookupFunction<_GetProfileNative, _GetProfileDart>(
      'OmniPcmClient_GetProfile',
    );
final omniClientUpdateProfile = omniDll
    .lookupFunction<_UpdateProfileNative, _UpdateProfileDart>(
      'OmniPcmClient_UpdateProfile',
    );
final omniClientArchiveInstance = omniDll
    .lookupFunction<_ArchiveInstanceNative, _ArchiveInstanceDart>(
      'OmniPcmClient_ArchiveInstance',
    );
final omniClientListArchives = omniDll
    .lookupFunction<_ListArchivesNative, _ListArchivesDart>(
      'OmniPcmClient_ListArchives',
    );
final omniClientGetArchive = omniDll
    .lookupFunction<_GetArchiveNative, _GetArchiveDart>(
      'OmniPcmClient_GetArchive',
    );
final omniClientDeleteArchive = omniDll
    .lookupFunction<_DeleteArchiveNative, _DeleteArchiveDart>(
      'OmniPcmClient_DeleteArchive',
    );
final omniClientInheritFromArchive = omniDll
    .lookupFunction<_InheritFromArchiveNative, _InheritFromArchiveDart>(
      'OmniPcmClient_InheritFromArchive',
    );
final omniClientGetStatus = omniDll
    .lookupFunction<_GetStatusNative, _GetStatusDart>(
      'OmniPcmClient_GetStatus',
    );
final omniClientPlaybackCommand = omniDll
    .lookupFunction<_PlaybackCommandNative, _PlaybackCommandDart>(
      'OmniPcmClient_PlaybackCommand',
    );
final omniClientPlay = omniDll.lookupFunction<_PlayNative, _PlayDart>(
  'OmniPcmClient_Play',
);
final omniClientSeek = omniDll.lookupFunction<_SeekNative, _SeekDart>(
  'OmniPcmClient_Seek',
);
final omniClientSetVolume = omniDll
    .lookupFunction<_SetFloatNative, _SetFloatDart>('OmniPcmClient_SetVolume');
final omniClientGetVolume = omniDll
    .lookupFunction<_GetFloatNative, _GetFloatDart>('OmniPcmClient_GetVolume');
final omniClientSetTargetLatency = omniDll
    .lookupFunction<_SetFloatNative, _SetFloatDart>(
      'OmniPcmClient_SetTargetLatency',
    );
final omniClientGetTargetLatency = omniDll
    .lookupFunction<_GetFloatNative, _GetFloatDart>(
      'OmniPcmClient_GetTargetLatency',
    );
final omniClientSetShuffle = omniDll
    .lookupFunction<_SetBoolNative, _SetBoolDart>('OmniPcmClient_SetShuffle');
final omniClientSetRepeatMode = omniDll
    .lookupFunction<_SetBoolNative, _SetBoolDart>(
      'OmniPcmClient_SetRepeatMode',
    );
final omniClientGetQueue = omniDll
    .lookupFunction<_GetQueueNative, _GetQueueDart>('OmniPcmClient_GetQueue');
final omniClientAddToQueue = omniDll
    .lookupFunction<_AddToQueueNative, _AddToQueueDart>(
      'OmniPcmClient_AddToQueue',
    );
final omniClientInsertIntoQueue = omniDll
    .lookupFunction<_InsertIntoQueueNative, _InsertIntoQueueDart>(
      'OmniPcmClient_InsertIntoQueue',
    );
final omniClientSetQueue = omniDll
    .lookupFunction<_SetQueueNative, _SetQueueDart>('OmniPcmClient_SetQueue');
final omniClientRemoveFromQueueIndex = omniDll
    .lookupFunction<_RemoveIndexNative, _RemoveIndexDart>(
      'OmniPcmClient_RemoveFromQueueIndex',
    );
final omniClientMoveInQueue = omniDll.lookupFunction<_MoveNative, _MoveDart>(
  'OmniPcmClient_MoveInQueue',
);
final omniClientClearQueue = omniDll.lookupFunction<_ClearNative, _ClearDart>(
  'OmniPcmClient_ClearQueue',
);
final omniClientGetHistory = omniDll
    .lookupFunction<_GetQueueNative, _GetQueueDart>('OmniPcmClient_GetHistory');
final omniClientRemoveFromHistory = omniDll
    .lookupFunction<_RemoveIndexNative, _RemoveIndexDart>(
      'OmniPcmClient_RemoveFromHistory',
    );
final omniClientMoveInHistory = omniDll.lookupFunction<_MoveNative, _MoveDart>(
  'OmniPcmClient_MoveInHistory',
);
final omniClientClearHistory = omniDll.lookupFunction<_ClearNative, _ClearDart>(
  'OmniPcmClient_ClearHistory',
);
final omniClientGetPlaylistSources = omniDll
    .lookupFunction<_GetPlaylistSourcesNative, _GetPlaylistSourcesDart>(
      'OmniPcmClient_GetPlaylistSources',
    );
final omniClientSetPlaylistSources = omniDll
    .lookupFunction<_SetPlaylistSourcesNative, _SetPlaylistSourcesDart>(
      'OmniPcmClient_SetPlaylistSources',
    );
final omniClientGetEqualizer = omniDll
    .lookupFunction<_GetEqualizerNative, _GetEqualizerDart>(
      'OmniPcmClient_GetEqualizer',
    );
final omniClientSetEqualizer = omniDll
    .lookupFunction<_SetEqualizerNative, _SetEqualizerDart>(
      'OmniPcmClient_SetEqualizer',
    );
final omniClientQueryTracks = omniDll
    .lookupFunction<_QueryTracksNative, _QueryTracksDart>(
      'OmniPcmClient_QueryTracks',
    );
final omniClientQueryAlbums = omniDll
    .lookupFunction<_QueryAlbumsNative, _QueryAlbumsDart>(
      'OmniPcmClient_QueryAlbums',
    );
final omniClientQueryTags = omniDll
    .lookupFunction<_QueryTagsNative, _QueryTagsDart>(
      'OmniPcmClient_QueryTags',
    );
final omniClientQueryPlaylists = omniDll
    .lookupFunction<_QueryPlaylistsNative, _QueryPlaylistsDart>(
      'OmniPcmClient_QueryPlaylists',
    );
final omniClientGetTrack = omniDll
    .lookupFunction<_GetTrackNative, _GetTrackDart>('OmniPcmClient_GetTrack');
final omniClientSetTrackExcluded = omniDll
    .lookupFunction<_SetTrackExcludedNative, _SetTrackExcludedDart>(
      'OmniPcmClient_SetTrackExcluded',
    );

final omniPcmOpenUtf8 = omniDll.lookupFunction<_OpenUtf8Native, _OpenUtf8Dart>(
  'OmniPcm_OpenUtf8',
);
final omniPcmClose = omniDll.lookupFunction<_ClosePcmNative, _ClosePcmDart>(
  'OmniPcm_Close',
);
final omniPcmGetInfo = omniDll.lookupFunction<_GetInfoNative, _GetInfoDart>(
  'OmniPcm_GetInfo',
);
final omniPcmGetSnapshot = omniDll
    .lookupFunction<_GetSnapshotNative, _GetSnapshotDart>(
      'OmniPcm_GetSnapshot',
    );
final omniPcmBindCurrentStream = omniDll
    .lookupFunction<_NoArgPcmNative, _NoArgPcmDart>(
      'OmniPcm_BindCurrentStream',
    );
final omniPcmIsFormatReady = omniDll
    .lookupFunction<_NoArgPcmNative, _NoArgPcmDart>('OmniPcm_IsFormatReady');
final omniPcmHasError = omniDll.lookupFunction<_NoArgPcmNative, _NoArgPcmDart>(
  'OmniPcm_HasError',
);
final omniPcmWaitForFormatReady = omniDll
    .lookupFunction<_WaitFormatNative, _WaitFormatDart>(
      'OmniPcm_WaitForFormatReady',
    );
final omniPcmReadFrames = omniDll
    .lookupFunction<_ReadFramesNative, _ReadFramesDart>('OmniPcm_ReadFrames');
